fixed the cursor blurring on safari

--- a/app/styles/customCursor.module.css
+++ b/app/styles/customCursor.module.css
@@ -2,8 +2,6 @@
   visibility: hidden; /* to hide for mobile devices */
   background-color: var(--primary-color);
   border-radius: 99px;
-  height: 1.25rem;
-  width: 1.25rem;
 
   position: fixed;
   left: 0;
@@ -17,12 +15,11 @@
 
   display: grid;
   place-items: center;
+  align-items: center;
 }
 
 .custom_cursor_style span {
-  font-size: 0.25rem;
-  opacity: 0;
-  transition: opacity 400ms ease;
+  transition: opacity 0.5s ease;
 }
 
 .custom_cursor_style:not([data-type=""]) > span {
